resolução do problema do botão excluir que não funcionava, mudança da identidade visual, cores e logo.

--- a/App/Views/app/timeline.phtml
+++ b/App/Views/app/timeline.phtml
@@ -8,7 +8,7 @@
 	  	<a class="menuItem" href="/sair">
 	  		Sair
 	  	</a>
-			<img src="/img/twitter_logo.png" class="menuIco" />
+			<img src="/img/logo2-myPrayer.png" class="menuIco" />
 	  </div>
 	</div>
 </nav>
@@ -70,7 +70,7 @@
 						<textarea class="form-control" name="tweet" id="exampleFormControlTextarea1" rows="3"></textarea>
 						
 						<div class="col mt-2 d-flex justify-content-end">
-							<button type="submit" class="btn btn-primary">Tweet</button>
+							<button type="submit" class="btn btn-success">Ore comigo</button>
 						</div>
 
 					</form>
@@ -84,7 +84,8 @@
 						<p><?=$tweet['tweet']?></p>
 						<br />
 						<?php if($tweet['id_usuario'] == $_SESSION['id']) { ?>
-							<form>
+							<form method="post" action="/removertweet">
+								<input type="hidden" name="id" value="<?= $tweet['id'] ?>">
 								<div class="col d-flex justify-content-end">
 									<button type="submit" class="btn btn-danger"><small>Remover</small></button>
 								</div>
