--- a/App/Views/app/quemSeguir.phtml
+++ b/App/Views/app/quemSeguir.phtml
@@ -8,7 +8,7 @@
 	  	<a class="menuItem" href="/sair">
 	  		Sair
 	  	</a>
-			<img src="/img/twitter_logo.png" class="menuIco" />
+			<img src="/img/logo2-myPrayer.png" class="menuIco" />
 	  </div>
 	</div>
 </nav>
