--- a/App/Views/index/index.phtml
+++ b/App/Views/index/index.phtml
@@ -6,15 +6,15 @@
     		<div>
 				<div class="communicationItem">
 					<i class="fas fa-search fa-2x mr-3"></i>
-					Siga o que lhe interessa.
+					Siga por quem está orando.
 				</div>
 				<div class="communicationItem">
 					<i class="fas fa-user-friends fa-2x mr-3"></i>
-					Saiba sobre o que as pessoas estão falando.
+					Saiba por quem estão orando.
 				</div>
 				<div class="communicationItem">
 					<i class="far fa-comment fa-2x mr-3"></i>
-					Participe da conversa.
+					Registre e acompanhe orações.
 				</div>
 			</div>
 		</div>
@@ -30,7 +30,7 @@
 					<input type="password" name="senha" class="form-control" placeholder="Senha">
 				</div>
 				<div class="col-auto">
-					<button type="submit" class="btn btn-primary mb-2">Entrar</button>
+					<button type="submit" class="btn btn-dark mb-2">Entrar</button>
 				</div>
 			</div>
 
@@ -45,11 +45,11 @@
 
 		<div class="row pt-5 pl-5 pr-5">
 			<div class="col pl-5 pr-5">
-				<img src="/img/twitter_logo.png" />
-				<h1 class="title">Veja o que está acontecendo no mundo agora</h1>
+				<img id="logo" src="/img/logo-myPrayer.png" />
+				<h1 class="title">Veja, acompanhe, batalhe em oração com seus irmãos e irmãs</h1>
 
-				<h2 class="mt-5 subtitle">Participe hoje do Twitter.</h2>
-				<a href="/inscreverse" class="btn btn-primary btn-block mb-2">Inscrever-se</a>
+				<h2 class="mt-5 subtitle">Participe hoje do maior ciclo de oração.</h2>
+				<a href="/inscreverse" class="btn btn-success btn-block mb-2">Inscrever-se</a>
 			</div>	
 		</div>
 
