arrumando o painel da pagina quem seguir

--- a/App/Views/app/timeline.phtml
+++ b/App/Views/app/timeline.phtml
@@ -36,7 +36,7 @@
 					<div class="row mb-2">
 
 						<div class="col">
-							<span class="perfilPainelItem">Tweets</span><br />
+							<span class="perfilPainelItem">Pedidos</span><br />
 							<span class="perfilPainelItemValor">
 								<?= $this->view->total_tweets['total_tweet'] ?>
 							</span>
